# patent_checker

./: .dockerignore  .gitignore  README.md
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/controllers/gpt/: config.py  controller.py  docs.py  members.py  route_assess_infringement_v1.py
backend/controllers/infringement/: __init__.py  config.py  controller.py  docs.py  members.py  route_create_assess_infringement_v1.py  route_get_assess_infringement_v1.py
backend/controllers/pkgs/: utils.py
backend/controllers/pkgs/dto/: assess_infringement_v1.py  product_infringement.py
backend/controllers/pkgs/gpt_helper/: groq.py  groq_config.py
backend/migrations/: __init__.py  env.py
backend/migrations/versions/: 17882e76f85d_create_a_baseline_migrations.py  1d8b8414fb6f_add_created_at_and_updated_at.py  e3df66db1e0b_create_a_baseline_migrations_2.py
backend/pkgs/: common.py  constants.py  errors.py  logging.py
backend/pkgs/db_helper/: config.py  postgresql.py
backend/pkgs/dto/: companies.py  company_products.py  patent.py  patent_claim.py  product.py
backend/pkgs/model/: __init__.py  assess_infringement.py  base.py
backend/pkgs/repo/assess_infringement/: create.py  get.py
deployment_gears/: docker-compose.yml
deployments/: docker-compose.yml
frontend/: Dockerfile  package-lock.json
frontend/app/: _layout.tsx  index.tsx  searcher.tsx
frontend/core/: dtos.ts  environment.ts  fetcher.ts
scripts/: be-code-format.sh  be-poetry.sh  build_backend.sh  build_frontend.sh  db-revision.sh  db-upgrade.sh  serve-backend.sh  serve-frontend.sh
