[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The backend to serve knowledge extraction from patent and do comparasion with existing features of another company"
authors = ["WangWilly <s89667654@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
argparse = "^1.4.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
groq = "^0.11.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
